crates/eaten-at/tests/snapshots/routes__document_head_hosted_publication.snap
---
source: crates/eaten-at/tests/routes.rs
expression: head_of(&body)
---
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Third Post — Ross Writes — eaten.at</title>
<link rel="stylesheet" href="/static/app.HASH.css">
<link rel="icon" type="image/svg+xml" href="/static/favicon.HASH.svg">
<link rel="icon" type="image/png" sizes="32x32" href="/static/icon-32.HASH.png">
<link rel="apple-touch-icon" href="/static/apple-touch-icon.HASH.png">
<meta name="description" content="The author's own excerpt.">
<link rel="canonical" href="https://ross.eaten.at/2026/09/third-post">
<meta property="og:url" content="https://ross.eaten.at/2026/09/third-post">
<meta property="og:type" content="article">
<meta property="og:title" content="Third Post">
<meta property="og:description" content="The author's own excerpt.">
<meta property="og:site_name" content="Ross Writes">
<meta property="og:image" content="https://eaten.at/img/did:plc:re3ebnp5v7ffagz6rb6xfei4/d3?size=og&amp;v=bafycid">
<meta property="og:image:width" content="1200">
<meta property="og:image:height" content="630">
<meta property="article:published_time" content="2026-09-07T12:00:00.000Z">
<meta property="article:modified_time" content="2026-09-08T09:00:00.000Z">
<meta name="twitter:card" content="summary_large_image">
<link rel="alternate" type="application/rss+xml" title="Ross Writes feed" href="https://eaten.at/at/did:plc:re3ebnp5v7ffagz6rb6xfei4/pub1/feed.xml">
</head>
